[gd_scene load_steps=6 format=3 uid="uid://dlj7cqu6r7mdq"]

[ext_resource type="Texture2D" uid="uid://cifbkqboyb0jw" path="res://assets/GameBg.png" id="1_rdw05"]
[ext_resource type="Script" uid="uid://dqdk6lyonsld4" path="res://Scenes/Game/Game.gd" id="1_y3kpf"]
[ext_resource type="PackedScene" uid="uid://cj5m0welfakyn" path="res://Scenes/UI/GameUI.tscn" id="2_3k6gv"]
[ext_resource type="PackedScene" uid="uid://cosi8kvbygul2" path="res://Scenes/Paddle/Paddle.tscn" id="2_gwu2e"]
[ext_resource type="AudioStream" uid="uid://bq5dburutmw1v" path="res://assets/Level_Music1.wav" id="4_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_y3kpf")

[node name="GameUI" parent="." instance=ExtResource("2_3k6gv")]
unique_name_in_owner = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(579, 299)
scale = Vector2(0.68, 0.68)
texture = ExtResource("1_rdw05")

[node name="Paddle" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(587, 607)

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y3kpf")
volume_db = -15.0
autoplay = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(1, 0.917647, 0.564706, 1)
theme_override_colors/font_shadow_color = Color(0.454524, 0.454524, 0.454524, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.470588, 0.301961, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 48
text = "000"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
